# kafka-template

./: .codecov.yml  .gitignore  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  lint.yml  test.yml
examples/: consumer.py  producer.py  protobuf_consumer.py  protobuf_producer.py
kafka_protobuf/: __init__.py  messages.py  utils.py
protos/: user.proto
tests/: conftest.py  test_protobuf_messaging.py  test_with_pytest_kafka.py
