[tool.poetry]
name = "kafka-protobuf-example"
version = "0.1.0"
description = "Kafka development environment with Protobuf and Schema Registry"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "kafka_protobuf"}]

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "2.0.2"
confluent-kafka = {version = "2.3.0", extras = ["schema-registry"]}
pydantic = "^2.0.0"
ipython = "*"
python-dotenv = "*"
protobuf = "4.25.1"
requests = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest-kafka = "^0.6.0" 
testcontainers = "^3.7.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
junit_family = "xunit2"
addopts = "--junitxml=test-reports/junit.xml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
